# IHPMC

./: .travis.yml  LICENSE  README  Readme.md  dependencies.dot  ihpmc.cabal  pclp.cabal  pclp.lkshw  test.pclp
examples/: basic_1d.pclp  basic_2d.pclp  basic_3d.pclp  diagnostic_100_01_60.pclp  diagnostic_10_0001_60_evidence.pclp  diagnostic_10_01_30.pclp  diagnostic_10_01_60.pclp  diagnostic_10_3_30.pclp  probabilisticGraph.pclp
src/: AST.hs  AstPreprocessor.hs  BasicTypes.hs  Benchmarks.hs  Exception.hs  Formula.hs  FormulaConverter.hs  GWMC.hs  GWMCExact.hs  GroundedAST.hs  GroundedASTCommon.hs  GroundedASTPhase1.hs  GroundedASTPhase2.hs  Grounder.hs  GrounderPhase1.hs  GrounderPhase2.hs  HPT.hs  IHPMC.hs  IdNrMap.hs  Interval.hs  KnowledgeBase.hs  KnowledgeBaseConverter.hs  Main.hs  MainBenchmark.hs  MainException.hs  MainIPHL.hs  MainPCLP.hs  NNF.hs  Options.hs  PST.hs  Parser.hs  Probability.hs  Util.hs
test/: Integration.hs  IntegrationExactProbabilities.hs  IntegrationGrounding.hs  IntegrationPreprocessor.hs  IntegrationTest.hs
