name: ihpmc
version: 0.0.1
cabal-version: >=1.4
build-type: Simple
license: MIT

executable ihpmc_float
    main-is: Main.hs
    build-depends:
        base -any,
        parsec -any,
        statistics -any,
        hashable >=1.2.4.0,
        argparser -any,
        unordered-containers -any,
        containers -any,
        mtl -any,
        explicit-exception -any,
        time -any,
        transformers -any,
        Boolean -any
    cpp-options: -DFLOAT_PROBS
    extensions: StandaloneDeriving GADTs DeriveGeneric TupleSections
                EmptyDataDecls NamedFieldPuns Rank2Types DoAndIfThenElse
    hs-source-dirs: src
    other-modules:
        GroundedAST
        Options
        Parser
        HPT
        Formula
        FormulaConverter
        IHPMC
        AST
        Grounder
        Interval
        Exception
        Probability
        Util
    ghc-options: -Werror -rtsopts -Wall -O2 -ferror-spans

executable ihpmc_exact
    main-is: Main.hs
    build-depends:
        base -any,
        parsec -any,
        statistics -any,
        hashable >=1.2.4.0,
        argparser -any,
        unordered-containers -any,
        containers -any,
        mtl -any,
        explicit-exception -any,
        time -any,
        transformers -any,
        Boolean -any
    extensions: StandaloneDeriving GADTs DeriveGeneric TupleSections
                EmptyDataDecls NamedFieldPuns Rank2Types DoAndIfThenElse
    hs-source-dirs: src
    other-modules:
        GroundedAST
        Options
        Parser
        HPT
        Formula
        FormulaConverter
        IHPMC
        AST
        Grounder
        Interval
        Exception
        Probability
        Util
    ghc-options: -Werror -rtsopts -Wall -O2 -ferror-spans

test-suite integration
    type: detailed-0.9
    test-module: Integration
    build-depends:
        base -any,
        Cabal >=1.9.2,
        base -any,
        parsec -any,
        statistics -any,
        hashable >=1.2.4.0,
        argparser -any,
        unordered-containers -any,
        containers -any,
        mtl -any,
        explicit-exception -any,
        time -any,
        transformers -any,
        neat-interpolation >=0.3.2.1,
        text -any,
        Boolean -any
    extensions: StandaloneDeriving GADTs DeriveGeneric TupleSections
                EmptyDataDecls NamedFieldPuns Rank2Types DoAndIfThenElse
    hs-source-dirs: test src
    other-modules:
        Main
        GroundedAST
        IntegrationGrounding
        IntegrationTest
        Options
        Parser
        HPT
        Formula
        FormulaConverter
        IHPMC
        AST
        Grounder
        Interval
        Exception
        Probability
        Util
    ghc-options: -Werror -Wall -ferror-spans
