name: ihpmc
version: 0.0.1
cabal-version: >=1.4
build-type: Simple
license: MIT
tested-with: GHC ==7.10.1 GHC ==7.10.2 GHC ==7.10.3 GHC ==8.0.2
             GHC ==8.0.1

executable ihpmc_float
    main-is: Main.hs
    build-depends:
        base -any,
        parsec -any,
        statistics -any,
        hashable >=1.2.4.0,
        argparser -any,
        hashmap >=1.3.2,
        containers -any,
        mtl -any,
        explicit-exception -any,
        time -any,
        transformers -any,
        Boolean -any,
        text -any,
        text-show >=3.4.1
    cpp-options: -DFLOAT_PROBS
    extensions: StandaloneDeriving GADTs DeriveGeneric TupleSections
                EmptyDataDecls NamedFieldPuns Rank2Types DoAndIfThenElse
                OverloadedStrings
    hs-source-dirs: src
    other-modules:
        AstPreprocessor
        GroundedAST
        IdNrMap
        Options
        Parser
        HPT
        Formula
        FormulaConverter
        IHPMC
        AST
        Grounder
        Interval
        Exception
        Probability
        Util
    ghc-options: -rtsopts -Wall -O2 -ferror-spans

executable ihpmc_exact
    main-is: Main.hs
    build-depends:
        base -any,
        parsec -any,
        statistics -any,
        hashable >=1.2.4.0,
        argparser -any,
        hashmap >=1.3.2,
        containers -any,
        mtl -any,
        explicit-exception -any,
        time -any,
        transformers -any,
        Boolean -any,
        text -any,
        text-show >=3.4.1
    extensions: StandaloneDeriving GADTs DeriveGeneric TupleSections
                EmptyDataDecls NamedFieldPuns Rank2Types DoAndIfThenElse
                OverloadedStrings
    hs-source-dirs: src
    other-modules:
        AstPreprocessor
        GroundedAST
        IdNrMap
        Options
        Parser
        HPT
        Formula
        FormulaConverter
        IHPMC
        AST
        Grounder
        Interval
        Exception
        Probability
        Util
    ghc-options: -rtsopts -Wall -O2 -ferror-spans

test-suite integration
    type: detailed-0.9
    test-module: Integration
    build-depends:
        base -any,
        Cabal >=1.9.2,
        base -any,
        parsec -any,
        statistics -any,
        hashable >=1.2.4.0,
        argparser -any,
        hashmap >=1.3.2,
        containers -any,
        mtl -any,
        explicit-exception -any,
        time -any,
        transformers -any,
        neat-interpolation >=0.3.2.1,
        text -any,
        Boolean -any,
        text -any,
        text-show >=3.4.1
    extensions: StandaloneDeriving GADTs DeriveGeneric TupleSections
                EmptyDataDecls NamedFieldPuns Rank2Types DoAndIfThenElse
                OverloadedStrings
    hs-source-dirs: test src
    other-modules:
        AstPreprocessor
        IdNrMap
        IntegrationExactProbabilities
        Main
        GroundedAST
        IntegrationGrounding
        IntegrationTest
        Options
        Parser
        HPT
        Formula
        FormulaConverter
        IHPMC
        AST
        Grounder
        Interval
        Exception
        Probability
        Util
    ghc-options: -Wall -O1 -ferror-spans
