name: pclp
version: 0.0.1
cabal-version: >=1.4
build-type: Simple
license: AllRightsReserved

executable pclp_float
    main-is: Main.hs
    build-depends:
        base -any,
        containers -any,
        explicit-exception -any,
        hashable >=1.2.4.0,
        parsec -any,
        statistics -any,
        time -any,
        unordered-containers -any,
        mtl -any,
        argparser -any
    cpp-options: -DFLOAT_PROBS
    extensions: StandaloneDeriving GADTs DeriveGeneric TupleSections
                EmptyDataDecls ParallelListComp NamedFieldPuns
    hs-source-dirs: src
    other-modules:
        GWMCExact
        Options
        Parser
        HPT
        Formula
        GWMC
        AST
        BasicTypes
        Benchmarks
        Grounder
        Interval
        Exception
    ghc-options: -Werror -rtsopts -fwarn-unused-imports

executable pclp_exact
    main-is: Main.hs
    build-depends:
        base -any,
        containers -any,
        explicit-exception -any,
        hashable >=1.2.4.0,
        parsec -any,
        statistics -any,
        time -any,
        unordered-containers -any,
        mtl -any,
        argparser -any
    extensions: StandaloneDeriving GADTs DeriveGeneric TupleSections
                EmptyDataDecls ParallelListComp NamedFieldPuns
    hs-source-dirs: src
    other-modules:
        GWMCExact
        Options
        Parser
        HPT
        Formula
        GWMC
        AST
        BasicTypes
        Benchmarks
        Grounder
        Interval
        Exception
    ghc-options: -Werror -rtsopts -fwarn-unused-imports

